app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/* common */

body {
	padding-top: 60px;
}

section {
	overflow: auto;
}

textarea {
	resize: vertical;
}

.center {
	text-allign: center;
}

.center h1 {
	margin-bottom: 10px;
}

